# math21

./: CMakeLists.txt  README.md  feature_config.h  math21_external_user_config_generated.h  math21_user_config.h.in  math21_user_config_generated.h
includes/: math21.h
src/ad/: differential.h  files.h  inner.h
src/algebra/: dict.h  files.h  inversible_map.cc  map.cc  map.h  sequence.h  set.h
src/data_structure/: files.h  seqce.h
src/data_structure/sort/: binary_search.cc  heap_sort.h  insertion_sort.h
src/draw/: draw.cc  draw.h
src/feel/: Function.h  Functional.h  IndexFunctional.h
src/functions/: cnn.cc  cnn.h  commonFunctions.h  cos.cc  cos.h  files.h  inner.h  multiply.h  sin.cc  sin.h  sum.cc  sum.h
src/functions/basic01/: interval.cc  interval.h
src/gpu/: cuda_info.cc  files.h  gpu.cc  gpu.cu  gpu.h  inner.h
src/image/: files.h  image.cc  image.h  inner.h
src/linear_algebra/: AffineTransform.cc  AffineTransform.h  files.h
src/matrix/: _array.h  _tenAfter.h  _tenMid.h  after_ops.h  array.cc  array.h  arrayImpl.h  files.h  inner.h  last_01.h  matrix.h  tenSub.h  tenView.h  ten_ops.h
src/matrix_analysis/: files.h  gje.cc  gje.h  inner.h  svd.h
src/matrix_op/: inner.h  mat_ops.cc  mat_ops.h  operations.cc  operations.h  serialize.h  ten_ops.cc  ten_ops.h  vec_ops.h
src/matrix_op/src/: operation.cu  operation_test.cu
src/memory/: AutoBuffer.cc  AutoBuffer.h  files.h  tool.cc  tool.h
src/ml/: kmeans.cc
src/numbers/: _assert.h  config.h  error.h  files.h  inner.h  number.h  serialize.cc  serialize.h  std_wrapper.cc  std_wrapper.h  system.h  tool.cc  tool.h  tool2.cc  tool2.h
src/numbers/generic/: arithmetic.h  convert.h  files.h  inner.h  literal_assign_helper_container.h  no_type_ops.h  serialize.h  vector.h
src/opt/: OptAlg.cc  OptAlg.h  SteepestDescent.h  files.h  inner.h
src/print/: files.h  inner.h  log.cc  log.h  tool.cc  tool.h
src/probability/: distributions.cc  distributions.h  files.h  ran.cc  ran.h
src/rl/: inner.h  inner_header.h
src/rl/chapter01/: tic_tac_toe.cc
src/rl/chapter02/: Bandit.cc  Bandit.h
src/rl/chapter04/: car_rental_synchronous.cc
src/rl/chapter05/: blackjack.cc
src/think/: function.h
src/think/types/: Point.h
src/variables/: Variable.cc  Variable.h  VariableMap.cc  VariableMap.h
test/: main.cc  test.h  test_tools.cc
test/ad/: n_derivative.cc  sin.cc  sin.h  test.cc
test/data_structure/: files.h  test.cc
test/matrix/: files.h  test.cc
test/opt/: files.h  test.cc
unit_test/numbers/: CMakeLists.txt  test.cc
